--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - .env
     environment:
       - REDIS_HOST=redis
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-}
       - USE_WEBHOOK=${USE_WEBHOOK:-true}
       - BOT_SERVICE_HOST=0.0.0.0
       - BOT_SERVICE_PORT=${BOT_PRIMARY_PORT:-8080}
@@ -33,6 +34,7 @@ services:
       - .env
     environment:
       - REDIS_HOST=redis
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-}
       - USE_WEBHOOK=${USE_WEBHOOK:-true}
       - BOT_SERVICE_HOST=0.0.0.0
       - BOT_SERVICE_PORT=${BOT_SECONDARY_PORT:-8081}
