--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,8 @@ pymysql>=1.1.0  # MySQL 驱动（Zeabur 部署需要）
 # === Web 框架 ===
 fastapi==0.104.1
 uvicorn==0.24.0
-pydantic==2.5.0
-pydantic-settings==2.1.0
+pydantic>=2.5.0
+pydantic-settings>=2.1.0
 
 # === 存储 ===
 redis>=5.0.0
@@ -37,7 +37,7 @@ python-multipart==0.0.6  # For form data parsing
 # === Streamlit 管理界面（Stage 7）===
 streamlit==1.29.0
 plotly==5.18.0
-pandas==2.1.4
+pandas>=2.2.0  # Python 3.13 需要 2.2.0+
 python-dotenv==1.0.0
 
 # === 测试 ===
