--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ permissions:
 jobs:
   test:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 20
     strategy:
       fail-fast: false
       matrix:
@@ -49,6 +49,19 @@ jobs:
           python -m pip install --upgrade pip
           pip install --upgrade -r requirements.txt
 
+      - name: Initialize database
+        env:
+          BOT_TOKEN: TEST_BOT_TOKEN
+          BOT_OWNER_ID: "123456789"
+          USDT_TRC20_RECEIVE_ADDR: TTESTADDRESS111111111111111111111111
+          WEBHOOK_SECRET: testsecret
+          ORDER_TIMEOUT_MINUTES: 30
+          ADDRESS_QUERY_RATE_LIMIT_MINUTES: "1"
+          ENERGY_API_USERNAME: "test_user"
+          ENERGY_API_PASSWORD: "test_pass"
+        run: |
+          python -c "from src.database import init_db; init_db()"
+
       - name: Run tests with coverage
         env:
           REDIS_URL: redis://localhost:6379/0
@@ -64,7 +77,7 @@ jobs:
           ENERGY_API_USERNAME: "test_user"
           ENERGY_API_PASSWORD: "test_pass"
         run: |
-          python -m pytest -v --tb=short --maxfail=50 --cov=src --cov-report=xml --cov-report=term-missing --junitxml=test-results.xml
+          python -m pytest -v --tb=short --maxfail=50 --cov=src --cov-report=xml --cov-report=term-missing --junitxml=test-results.xml --timeout=120
 
       - name: Upload coverage to Codecov
         if: matrix.python-version == '3.12'
