chore: 项目文件清理和代码优化
删除废弃文件:

- src/modules/premium/handler_v2.py (已被 handler.py 替代)

- src/webhook.py (已被 src/api/ 替代)

- .cunzhi-memory/ (Cursor AI 缓存)

- scripts/fix_cancel_handlers.py, start_architecture_migration.py

- docs/an_luoji.md, AGENT_RULES.md

- tests/test_premium_v2_*.py, test_premium_fix.py

代码优化:

- 移除未使用的 EnergyPackage 导入

- 更新 cspell.json 词典

- 更新测试文件使用 PremiumModule

- 文档和配置更新

--- a/.env.example
+++ b/.env.example
@@ -69,9 +69,13 @@ TRX_EXCHANGE_TEST_MODE=true
 
 # ========== 能量服务配置 ==========
 
-# 能量 API 账号
+# 能量 API 账号 (对接 trxfast.com / trxno.com)
 # ENERGY_API_USERNAME=your_username
 # ENERGY_API_PASSWORD=your_password
+
+# 能量 API 地址 (主地址和备用地址)
+# ENERGY_API_BASE_URL=https://trxno.com
+# ENERGY_API_BACKUP_URL=https://trxfast.com
 
 # 能量代理地址 (TRX 直转模式)
 # ENERGY_RENT_ADDRESS=T...
