fix(energy): 修复能量同步任务 URL 参数问题
P0 阻塞项修复:

- energy_sync.py: 添加 base_url/backup_url 参数传递

- 确保后台同步任务使用配置中的 API 服务器地址

P2 配置文档完善:

- .env.example: 添加生产环境配置项 (ENV/LOG_LEVEL/SUPPORT_CONTACT)

- 添加生产环境安全检查说明

P2 数据库迁移脚本:

- 004_user_confirmation_fields.py: 添加用户确认相关字段

- energy_orders/orders/premium_orders 表新增 user_tx_hash 等字段

测试:

- 新增 URL 参数传递验证测试

- 758 tests passed, 2 skipped

--- a/.env.example
+++ b/.env.example
@@ -101,3 +101,32 @@ ADDRESS_QUERY_RATE_LIMIT_MINUTES=1
 
 # USDT 汇率缓存 TTL (秒)
 USDT_RATES_CACHE_TTL=3600
+
+# ========== 生产环境配置 ==========
+
+# 环境标识 (dev | staging | prod)
+# 生产环境部署时必须设置为 prod
+ENV=dev
+
+# 日志级别 (DEBUG | INFO | WARNING | ERROR)
+LOG_LEVEL=INFO
+
+# 日志格式 (text | json)
+# 生产环境建议使用 json 便于日志收集
+# LOG_FORMAT=json
+
+# 客服联系方式（Telegram 用户名，用于用户咨询）
+SUPPORT_CONTACT=@your_support_username
+
+# API 认证密钥（逗号分隔，用于 /api 端点认证）
+# 生产环境必须配置至少一个密钥
+# API_KEYS=key1,key2,key3
+
+# ========== 安全检查 ==========
+# 以下配置项在生产环境必须正确设置：
+# 1. BOT_TOKEN - 从 @BotFather 获取的真实 Token
+# 2. BOT_OWNER_ID - 管理员的 Telegram User ID
+# 3. TRX_EXCHANGE_TEST_MODE=false - 关闭测试模式启用真实转账
+# 4. TRX_EXCHANGE_PRIVATE_KEY - TRX 发币钱包私钥
+# 5. USDT_TRC20_RECEIVE_ADDR - USDT 收款地址
+# 6. WEBHOOK_SECRET - 支付回调签名密钥
