chore: 添加代码审计工具链
新增文件:

- pyproject.toml: Ruff/MyPy/Bandit/Pytest 统一配置

- scripts/audit.ps1: PowerShell 审计脚本

- scripts/audit.sh: Bash 审计脚本

- docs/CODE_AUDIT_GUIDE.md: 审计命令使用指南

依赖更新:

- requirements.txt: 添加 ruff/mypy/bandit

--- a/requirements.txt
+++ b/requirements.txt
@@ -46,3 +46,8 @@ pytest-asyncio>=1.0.0  # 需要 1.0+ 支持 asyncio_default_fixture_loop_scope
 pytest-timeout>=2.3.0
 pytest-cov>=4.1.0
 fakeredis>=2.20.0
+
+# === 代码审计工具 ===
+ruff>=0.8.0           # 代码风格检查和格式化
+mypy>=1.13.0          # 静态类型检查
+bandit>=1.7.0         # 安全漏洞扫描
