fix: 修复 P1 级别代码质量问题
修复内容:

- RUF006: 保存 asyncio.create_task 引用防止 GC 回收

- E722: 将裸 except 改为 except Exception

配置优化:

- pyproject.toml: 忽略 RUF001/002/003 中文全角字符警告

Ruff 警告从 1548 减少到 104 个

测试结果: 758 passed, 2 skipped

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,10 @@ ignore = [
     "B904",   # raise from（兼容性考虑）
     "SIM108", # 三元表达式（可读性优先）
     "RUF012", # 可变类默认值（Pydantic 模型需要）
+    # 中文项目特有：忽略全角字符警告（中文标点在中文项目中是正常的）
+    "RUF001", # 字符串中的全角字符
+    "RUF002", # 文档字符串中的全角字符
+    "RUF003", # 注释中的全角字符
 ]
 # 可自动修复的规则
 fixable = ["ALL"]
