feat: add Render.com deployment support
- Add .python-version for Python 3.11
- Add psycopg2-binary to requirements.txt for PostgreSQL
- Add src/render_entrypoint.py for Webhook mode
- Add Dockerfile.render with PostgreSQL support
- Add render.yaml for Infrastructure as Code
- Add .renderignore to exclude test files
- Update .env.example with Render config section
- Update README.md with Render deployment guide
- Add docs/RENDER_DEPLOYMENT.md with detailed instructions

--- a/.env.example
+++ b/.env.example
@@ -130,3 +130,19 @@ SUPPORT_CONTACT=@your_support_username
 # 4. TRX_EXCHANGE_PRIVATE_KEY - TRX 发币钱包私钥
 # 5. USDT_TRC20_RECEIVE_ADDR - USDT 收款地址
 # 6. WEBHOOK_SECRET - 支付回调签名密钥
+
+# ========== Render.com 部署配置 ==========
+# 以下配置适用于 Render.com 平台部署
+# 详细说明请参考 docs/RENDER_DEPLOYMENT.md
+
+# Render 自动注入的数据库连接字符串（PostgreSQL）
+# DATABASE_URL=postgresql://user:pass@host:5432/dbname
+
+# Render 服务端口（Render 会自动设置 PORT 环境变量）
+# PORT=10000
+
+# Webhook URL（替换为实际的 Render 服务 URL）
+# BOT_WEBHOOK_URL=https://your-service.onrender.com/webhook
+
+# Redis 连接字符串（Render Key Value 服务）
+# REDIS_CONNECTION_STRING=redis://user:pass@host:port
