--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ httpx~=0.27.0  # 修复版本冲突（与 python-telegram-bot 兼容）
 sqlalchemy>=2.0.0
 alembic==1.13.0  # 数据库迁移
 pymysql>=1.1.0  # MySQL 驱动（Zeabur 部署需要）
+psycopg2-binary>=2.9.9  # PostgreSQL 驱动（Render 部署需要）
 
 # === Web 框架 ===
 fastapi==0.104.1
