feat: 数据库配置统一 + 模块优化 + 清理过时脚本
- 数据库路径统一为 ./data/tg_bot.db
- 修改 src/database.py 和 alembic.ini 默认配置
- 优化 Energy/Premium/Menu 模块
- 重构 content_service.py 和管理面板
- 删除过时诊断脚本 (diagnose_*.py)
- 更新 CHANGELOG 和 CURRENT_STATUS 文档
- 新增 PRODUCTION_INSTALL.md 生产安装指南

--- a/alembic.ini
+++ b/alembic.ini
@@ -14,7 +14,7 @@ timezone = UTC
 output_encoding = utf-8
 
 # SQLAlchemy URL (与 database.py 保持一致)
-sqlalchemy.url = sqlite:///./tg_bot.db
+sqlalchemy.url = sqlite:///./data/tg_bot.db
 
 [post_write_hooks]
 # 格式化生成的迁移文件
